--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
