--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "sass": "^1.70.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
