--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "fua",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18"
+  },
+  "license": "UNLICENSED",
   "scripts": {
     "dev": "next dev -p 8080",
     "build": "next build",
