Fix post routing

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@jest/globals": "^29.7.0",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
+    "@types/aria-query": "^5.0.4",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
